# rsoundboard

./: .gitignore  CMakeLists.txt  README.md
res/100/: sdf_text.fs
res/330/: sdf_text.fs
src/: app.h  chello.c  font_sdf.c  font_sdf.h  keyboard_hook.c  keyboard_hook.h  load_last_directory.c  load_last_directory.h  main.c  main_old.c  miniaudio_devices.c  rect_utils.c  rect_utils.h  search_file.c  search_file.h  text_input_box.h
src/resources/: app_icon.h  hack_regular_font.h
src/tools/: CMakeLists.txt
src/tools/resources_embed/: file2c.c  font2c.c  image2c.c
